<resources>
    <string name="app_name">DailyFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Harmonogram ćwiczeń</string>
    <string name="menu_training_history">Historia treningów</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_statistics">Statystyki</string>

    <string name="popup_title_add_event_to_calendar">Select exercise on : </string>
    <string name="nameofgoal">TextView</string>
    <string name="goalenddate">TextView</string>
    <string name="notsucceded">TextView</string>
    <string name="maxvalueprogress">TextView</string>
    <string name="wzrost_190cm">Wzrost 190cm</string>
    <string name="waga_80kg">Waga: 80kg</string>
    <string name="_10_10_1998">10-10-1998</string>
    <string name="jacek">Jacek</string>
</resources>
