<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="Harmonogram ćwiczeń" />
        <item
            android:id="@+id/nav_excercise"
            android:icon="@drawable/ic_pool_black_24dp"
            android:title="Zdefiniowane ćwiczenia" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="Cele treningowe" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="Profil" />
        <item
            android:id="@+id/nav_stopwatch"
            android:icon="@drawable/ic_play_circle_filled_black_24dp"
            android:title="Rozpoczęcie treningu" />
        <item
            android:id="@+id/nav_training_history"
            android:icon="@drawable/ic_menu_training_history"
            android:title="@string/menu_training_history" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
