<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@id/nav_home"
        android:name="com.dailyFitSoft.dailyfit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@id/nav_profile"
        android:name="com.dailyFitSoft.dailyfit.ui.profile.ProfileFragment"
        android:label="Profil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@id/nav_excercise"
        android:name="com.dailyFitSoft.dailyfit.ui.exercise.ExerciseFragment"
        android:label="Zdefiniowane aktywności"
        tools:layout="@layout/fragment_excercise" />
    <fragment
        android:id="@id/nav_goal"
        android:name="com.dailyFitSoft.dailyfit.ui.goals.GoalFragment"
        android:label="Cele treningowe"
        tools:layout="@layout/fragment_goal" />
    <fragment
        android:id="@id/nav_stopwatch"
        android:name="com.dailyFitSoft.dailyfit.ui.stopwatch.StopwatchFragment"
        android:label="Rozpoczęcie treningu"
        tools:layout="@layout/fragment_stopwatch" />
    <fragment
        android:id="@id/nav_training_history"
        android:name="com.dailyFitSoft.dailyfit.ui.training_history.TrainingHistoryFragment"
        android:label="@string/menu_training_history"
        tools:layout="@layout/fragment_training_history" />

    <fragment
        android:id="@id/nav_statistics"
        android:name="com.dailyFitSoft.dailyfit.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>